--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   },
   "dependencies": {
     "compression": "^1.0.3",
+    "cookie-parser": "^1.4.0",
     "cors": "^2.5.2",
+    "express-session": "^1.12.1",
     "loopback": "^2.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.1.0",
+    "loopback-component-passport": "^1.6.0",
     "loopback-connector-mysql": "^2.2.0",
     "loopback-datasource-juggler": "^2.39.0",
+    "passport-facebook": "^2.0.0",
     "serve-favicon": "^2.0.1"
   },
   "devDependencies": {
